updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>My name is Jacob Patton. I am 23 and graduated from James Madison Universitty in the spring of 2018.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Galax, VA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Golfing, Fishing and Kayaking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Public Relations Strategist</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I have just moved to Richmond from Charleston, SC and live on W. Cary St.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a developer because I think it is a good career that is only becoming more and more relevant.</p>
     </section>
 
     <footer id="footer">
